# pheval

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  decorators.py  docs_gen.sh  index.html  mermaid.css  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.sh  setup.py  sitemap.xml  tox.ini
.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yaml
CODE_OF_CONDUCT/: index.html
PhEval-Benchmarking/: assess_prioritisation.py  example_directory_list.txt
PheVal-Benchmarking/: README.md  pyproject.toml
about/: index.html
benchmarking/: index.html
benchmarking/executing_a_benchmark/: index.html
contact/: index.html
contributing/: index.html
data/: hp_zp_mappings.csv
developing_a_pheval_plugin/: index.html
docs/: CODE_OF_CONDUCT.md  about.md  contact.md  contributing.md  developing_a_pheval_plugin.md  executing_a_benchmark.md  exomiser_pipeline.md  index.md  makefile.md  pipeline.md  plugins.md  roadmap.md  styleguide.md  use_cases.md
docs/benchmarking/: executing_a_benchmark.md  index.md
docs/getting_started/: getting_started.md  installation.md
docs/plugins/: index.md
docs/resources_for_contributors/: contributions.md  developing_a_pheval_plugin.md
docs/using_pheval/: plugins_and_runners.md
docs/utilities/: data_preparation.md  index.md  phenotype_scrambling.md  resource_updates.md  variant_utilities.md
executing_a_benchmark/: index.html
exomiser_pipeline/: index.html
getting_started/getting_started/: index.html
getting_started/installation/: index.html
pheval/: __init__.py  __main__.py  cli.py  db.py  decorators.py  mappings.py  memory.py  randomisation.py  run.sh
pheval-benchmark/: README.md  pyproject.toml
pheval-benchmark/pheval_benchmark/src/: assess_prioritisation.py  create_batch_commands.py
pheval-benchmark/pheval_benchmark/src/resources/disease_phenopackets/: Al-Dosari-2010-TFAP2A-10-year-old_girl.json  Badin-2017-RUNX1-Pedigree_I,_V_2.json  Bhoj-2016-TBCK-3-1.json  Bhoj-2016-TBCK-6-1.json  Bluteau-2018-SAMD9L-UB081.json  Böddrich-1997-NF1-0548.json  Cao-2018-FBN1-Patient_1.json  Cao-2018-FBN1-Patient_2.json  Cao-2018-FBN1-Patient_3.json  Cao-2018-TGFBR2-Patient_4.json  Chebly-2018-ERCC8-Patient_A.json  Chebly-2018-ERCC8-Patient_C.json  Chen-2016-SAMD9L-II-4.json  Chong-2016-TBCK-C-II-1.json  Chong-2016-TBCK-D-II-1.json  Dastsooz-2017-PLA2G6-family_II_patient_II.json  Dauber-2014-SLC35C1-Proband_1.json  Delahaye-2007-CHD7-B_III-3.json  Di_Nottia-2017-PARK7-proband.json  Dias-2013-TRPS1-girl.json  Dikoglu-2015-LONP1-Patient_1.json  Djamshidian-2009-VCP-II-3.json  Du-2018-TINF2-proband.json  Ekvall-2015-NRAS-case_1.json  Elsaid-2017-NT5C2-II.3.json  Falik_Zaccai-2014-INSR-ISR1.json  Fregeau-2016-RERE-Subject_4.json  Gan-Or-2016-CAPN1-Family_A-V_2.json  Geiger-2017-TUBB2B-proband.json  Gowda-2017-MCOLN1-6_year_old_boy.json  Hall-2017-PLAA-Family_D-Case_VIII-1.json  Hamzeh-2016-GPSM2-case_1.json  Hashemi-Gorji-2019-MED23-IV.8.json  Holmberg-1997-GP1BA-73_year_old_male.json  Hsu-2017-SNAP29-The_patient.json  Jagadisan-2017-PYGL-2-year_5-month_old_child.json  Janecke-2015-SLC9A3-Patient_9.json  Jiang-2017-PPIB-second_fetus.json  Jordan-2018-RERE-Subject_4.json  Jordan-2018-RERE-Subject_5.json  (+54 more)
pheval-benchmark/src/pheval_benchmark/: __init__.py  assess_prioritisation.py  cli.py  create_batch_commands.py  create_noisy_phenopackets.py  create_spiked_vcf.py  custom_exceptions.py
pheval-benchmark/src/pheval_benchmark/exomiser/: assess_prioritisation.py  create_batch_commands.py  yaml_to_family_phenopacket.py
pheval-benchmark/src/pheval_benchmark/resources/disease_phenopackets/: Ajmal-2013-BBS1-IV-5_family_A.json  Al-Qattan-2018-SCARF2-proband.json  AlSubhi-2016-ALG9-IV_5.json  Alazami-2016-ATP6V1E1-Family_5_-_IV_2.json  Ali-2017-MYH3-proband.json  Alzahrani-2018-EPG5-18-month_son.json  Arno-2017-ARHGEF18-Individual_1.json  Arno-2017-ARHGEF18-Individual_2.json  Asgharzade-2018-GIPC3-Ahv-14_23.json  Avgeris-2017-TSC1-patient_6.json  Baldi-2018-NKX6-2-F6,II-2.json  Bee-2015-BBS2-II_2.json  Ben_Ammar-2013-MUSK-patient.json  Bhoj-2016-TBCK-1-1.json  Bhoj-2016-TBCK-4-1.json  Bhoj-2016-TBCK-5-1.json  Bhoj-2016-TBCK-8-1.json  Bulut-2017-SETBP1-proposita.json  Canosa-2018-SOD1-patient.json  Chabás-2005-GBA-_boy_weighing_1690_g.json  Chebly-2018-ERCC6-Patient_B.json  Chelban-2017-NKX6-2-III-1.json  Chelban-2017-NKX6-2-IV-6.json  Chong-2016-TBCK-A-II-1.json  Chong-2016-TBCK-B-IV-4.json  Dorboz-2017-NKX6-2-Patient_4_II-1.json  Dougherty-2016-NPC1-The_proband.json  Falik_Zaccai-2017-PLAA-A-VI3.json  Fiscaletti-2018-SP7-II_5.json  Fregeau-2016-RERE-Subject_2.json  Fregeau-2016-RERE-Subject_5.json  Fregeau-2016-RERE-Subject_9.json  Fusco-2017-PMP22-Proband.json  Gan-Or-2016-CAPN1-Family_C-IV_13.json  Ge-2019-TJP2-proband.json  Gerding-2009-LITAF-Proband.json  Gregor-2018-FBXO11-Individual_1.json  Grumach-2015-CARD9-Patient.json  Guerreiro-2016-TBCK-II-3.json  Guerreiro-2016-TBCK-II-4.json  (+54 more)
pheval-benchmark/src/pheval_benchmark/utils/: phenopacket_utils.py  utils.py
pheval/jupyter/: results_comparison.ipynb  ssp_randomisation.ipynb  test.ipynb
pipeline/: index.html
plugins/: index.html
resources/: Makefile.j2  config.yaml  custom.Makefile  generatemakefile.sh  pheval-config.yaml
resources_for_contributors/api_reference/: index.html
resources_for_contributors/contributions/: index.html
roadmap/: index.html
search/: search_index.json
src/: db.py
styleguide/: index.html
tests/: generate_plots.py  test_analysis.py  test_binary_classification_curves.py  test_binary_classification_stats.py  test_cli.py  test_cli_utils.py  test_create_noisy_phenopackets.py  test_create_spiked_vcf.py  test_exomiser_db_ingestion.py  test_generate_plots.py  test_generate_rank_comparisons.py  test_generate_summary_outputs.py  test_makefile.yaml  test_parse_pheval_result.py  test_phenopacket_truth_set.py  test_phenopacket_utils.py  test_pipeline_workflow.yaml  test_post_processing.py  test_post_processing_analysis.py  test_rank_stats.py  test_runner.py  test_utils.py  test_validate_result_format.py
utilities/: index.html
(+10100 files in other folders)
