[project]
name = "pheval"
version = "0.7.1"
description = ""
authors = [
    { name = "Yasemin Bridges", email = "y.bridges@qmul.ac.uk" },
    { name = "Julius Jacobsen", email = "j.jacobsen@qmul.ac.uk" },
    { name = "Nico Matentzoglu", email = "nicolas.matentzoglu@gmail.com" },
    { name = "Vinícius de Souza", email = "souzadevinicius@gmail.com" },
]
requires-python = ">=3.10,<4.0.0"
readme = "README.md"
dependencies = [
    "jaydebeapi>=1.2.3",
    "tqdm>=4.64.1",
    "pandas>=1.5.1",
    "deprecation>=2.1.0",
    "click>=8.1.3",
    "class-resolver>=0.4.2",
    "phenopackets>=2.0.2,<3",
    "oaklib>=0.5.6",
    "google>=3.0.0,<4",
    "pyaml>=21.10.1,<22",
    "plotly>=5.13.0,<6",
    "seaborn>=0.12.2,<0.13",
    "matplotlib>=3.7.0,<4",
    "pyserde>=0.9.8,<0.10",
    "polars~=1.23",
    "scikit-learn>=1.4.0,<2",
    "duckdb>=1.0.0,<2",
    "pyarrow>=19.0.1,<20",
]

[project.scripts]
pheval = "pheval.cli:pheval"
pheval-utils = "pheval.cli:pheval_utils"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "coverage>=6.5.0,<7",
    "pytest-workflow>=2.0.1,<3",
    "ruff>=0.4.6,<0.5",
]
docs = [
    "mkdocs>=1.4.2,<2",
    "mkdocs-material>=8.5.11,<9",
    "pymdown-extensions~=9.9",
    "mkdocs-include-dir-to-nav>=1.2.0,<2",
    "mkdocs-click>=0.8.0,<0.9",
    "griffe>=1.3.2,<2.0.0",
    "mkdocstrings-python>=1.16.11,<2",
    "mkdocstrings>=0.29.1,<0.30",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["src/pheval"]

[tool.hatch.build.targets.wheel]
include = ["src/pheval"]

[tool.hatch.build.targets.wheel.sources]
"src/pheval" = "pheval"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
line-length = 120
target-version = "py311"

src = ["src", "tests"]
respect-gitignore = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "N",  # pep8-naming
    "S",  # flake8-bandit
    "C90",  # mccabe complexity
    "PL",  # pylint
    "RUF",  # Ruff-specific rules
    "UP",  # pyupgrade
    "NPY",  # NumPy-specific
]
ignore = [
    "E203", "S311", "S101", "S106", "S404", "S108", "S307", "S603", "S607", "S608",
    "B024", "B027", "N801", "N803", "N806", "N815", "E731", "C901", "B019", "PLR0913", "PLW0211"
]
fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.lint.mccabe]
max-complexity = 13

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
