[tool.poetry]
name = "pheval-benchmark"
version = "0.1.0"
description = ""
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>"]
readme = "README.md"
packages = [{include = "pheval_benchmark", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pyaml = "^21.10.1"
vcfpy = "^0.13.4"
pysam = "^0.19.1"

[tool.poetry.scripts]
pheval = "pheval_benchmark.cli:pheval_benchmark"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
