[tool.poetry]
name = "pheval-benchmark"
version = "0.1.0"
description = ""
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>"]
readme = "README.md"
packages = [{include = "pheval_benchmark", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
click = "^8.1.3"
pyaml = "^21.10.1"
oaklib = "^0.1.49"
phenopackets = "^2.0.2"
protobuf = "3.20.1"
google = "^3.0.0"

[tool.poetry.scripts]
pheval = "pheval_benchmark.cli:pheval_benchmark"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
